<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity"
    android:background="@drawable/background">

    <ImageView
        android:id="@+id/cartImg"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:src="@drawable/shopping_cart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/cart" />

    <TextView
        android:id="@+id/NamasteUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/namaste_user"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/Welcome"
        android:layout_marginTop="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/NamasteUser"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/categoriesRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:layout_constraintTop_toBottomOf="@id/categories"
        app:layout_constraintBottom_toTopOf="@+id/offers"/>

    <TextView
        android:id="@+id/categories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/categories"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/categoriesRecyclerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Welcome" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/offersRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:layout_constraintTop_toBottomOf="@id/offers"
        app:layout_constraintBottom_toTopOf="@+id/QuickAction"/>

    <TextView
        android:id="@+id/offers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/offers"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/offersRecyclerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/categoriesRecyclerView" />

    <TextView
        android:id="@+id/QuickAction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quick_actions"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/CV1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/offersRecyclerView" />
    <TextView
        android:id="@+id/CV1"
        android:layout_width="205dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/recharge_your_wallet"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/CV3"
        app:layout_constraintEnd_toStartOf="@+id/CV2"
        app:drawableStartCompat="@drawable/icon_wallet" />
    <TextView
        android:id="@+id/CV2"
        android:layout_width="205dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/edit_your_subscription"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/CV4"
        app:drawableStartCompat="@drawable/icon_edit" />

    <TextView
        android:id="@+id/CV3"
        android:layout_width="205dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/view_order_statement"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/CV4"
        app:drawableStartCompat="@drawable/icon_note" />

    <TextView
        android:id="@+id/CV4"
        android:layout_width="205dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/add_your_holidays"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_below="@+id/CV2"
        android:layout_toEndOf="@+id/CV3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:drawableStartCompat="@drawable/icon_food" />

</androidx.constraintlayout.widget.ConstraintLayout>
<!--    <androidx.gridlayout.widget.GridLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="160dp"-->
<!--        android:layout_marginTop="570dp"-->
<!--        app:columnCount="2"-->
<!--        app:rowCount="2">-->

<!--        <androidx.cardview.widget.CardView-->
<!--            android:layout_width="205dp"-->
<!--            android:layout_height="80dp"-->
<!--            app:cardElevation="12dp"-->
<!--            app:layout_row="0"-->
<!--            app:layout_column="0">-->
<!--            <TextView-->
<!--                android:id="@+id/CV1"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:gravity="center"-->
<!--                android:drawableStart="@drawable/icon_wallet"-->
<!--                android:drawablePadding="8dp"-->
<!--                android:text="Recharge\nYour Wallet"-->
<!--                android:textSize="18sp"-->
<!--                android:textStyle="bold"-->
<!--                android:textColor="@color/black"/>-->
<!--        </androidx.cardview.widget.CardView>-->
<!--        <androidx.cardview.widget.CardView-->
<!--            android:layout_width="205dp"-->
<!--            android:layout_height="80dp"-->
<!--            app:cardElevation="12dp"-->
<!--            app:layout_row="0"-->
<!--            app:layout_column="1">-->
<!--            <TextView-->
<!--                android:id="@+id/CV2"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:gravity="center"-->
<!--                android:drawableStart="@drawable/icon_edit"-->
<!--                android:drawablePadding="8dp"-->
<!--                android:text="Edit Your\nSubscription"-->
<!--                android:textSize="18sp"-->
<!--                android:textStyle="bold"-->
<!--                android:textColor="@color/black"/>-->
<!--        </androidx.cardview.widget.CardView>-->
<!--        <androidx.cardview.widget.CardView-->
<!--            android:layout_width="205dp"-->
<!--            android:layout_height="80dp"-->
<!--            app:cardElevation="12dp"-->
<!--            app:layout_row="1"-->
<!--            app:layout_column="0">-->
<!--            <LinearLayout-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="match_parent"-->
<!--                android:orientation="horizontal"-->
<!--                android:gravity="center">-->

<!--                <TextView-->
<!--                    android:id="@+id/CV3"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:gravity="center"-->
<!--                    android:drawableStart="@drawable/icon_note"-->
<!--                    android:drawablePadding="8dp"-->
<!--                    android:text="View Order\nStatement"-->
<!--                    android:textSize="18sp"-->
<!--                    android:textStyle="bold"-->
<!--                    android:textColor="@color/black"/>-->
<!--            </LinearLayout>-->
<!--        </androidx.cardview.widget.CardView>-->
<!--        <androidx.cardview.widget.CardView-->
<!--            android:layout_width="205dp"-->
<!--            android:layout_height="80dp"-->
<!--            app:cardElevation="12dp"-->
<!--            app:layout_row="1"-->
<!--            app:layout_column="1">-->
<!--            <TextView-->
<!--                android:id="@+id/CV4"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="Add Your\nHolidays"-->
<!--                android:textSize="18sp"-->
<!--                android:textColor="@color/black"-->
<!--                android:textStyle="bold"-->
<!--                android:gravity="center"-->
<!--                android:drawableStart="@drawable/icon_food"/>-->
<!--        </androidx.cardview.widget.CardView>-->
<!--    </androidx.gridlayout.widget.GridLayout>-->
